# try-lm

./: .gitignore  CLAUDE.md  pyproject.toml
configs/: tiny_stories.yaml
docs/book/: Makefile  main.tex  preamble.tex
docs/book/appendices/: a-architecture-variations.tex  b-advanced-generation.tex  c-debugging.tex  d-glossary.tex
docs/book/chapters/: 01-what-are-language-models.tex  02-environment-setup.tex  03-tokenization.tex  04-preparing-training-data.tex  05-token-embeddings.tex  06-self-attention.tex  07-transformer-blocks.tex  08-complete-gpt-model.tex  09-training-loop.tex  10-monitoring-checkpointing.tex  11-evaluation.tex  12-text-generation.tex  13-end-to-end-workflow.tex  14-design-choices.tex  15-scaling-efficiency.tex
notebooks/: train_colab.ipynb
src/trylm/: __init__.py  cli.py  config.py  data.py  evaluate.py  generate.py  model.py  tokenizer.py  trainer.py
